--- a/css/style.css
+++ b/css/style.css
@@ -182,3 +182,26 @@ footer {
 #calendar-widget td {
     border: 1px solid #29a7e1;
 }
+
+
+
+#contacts-list .actions a {
+    font-size: 13px;
+    text-decoration: none;
+}
+
+#contacts-list .actions span {
+    color: blue;
+}
+
+#contacts-list .actions span:hover {
+    color: red;
+}
+
+#contacts-list .actions span {
+    display: none;
+}
+
+#contacts-list tr:hover .actions span {
+    display: inline;
+}
